# py-anyfs

./: .gitignore  README.md  pyproject.toml
notebooks/: azure-blob.ipynb
src/anyfs/: __init__.py  errors.py
src/anyfs/aio/: base.py
src/anyfs/aio/backend/: azure_blob.py  local.py
src/anyfs/aio/backend/azure_blob/: __init__.py  sharedkeyauth.py
